<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:id="@+id/constraint_layout"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/colorPrimaryDark"
                                             tools:context="colinparrott.com.songle.menu.MainActivity">


    <Button
        android:id="@+id/btn_Play"
        android:layout_width="250dp"
        android:layout_height="95dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="12dp"
        android:text="@string/btntxt_Play"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diffSeek" />

    <Button
        android:id="@+id/btn_ClearSave"
        android:layout_width="138dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="@color/colorPrimaryMedium"
        android:elevation="12dp"
        android:text="@string/btntxt_ClearSave"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/txt_DifficultyDesc"
        app:layout_constraintTop_toTopOf="@+id/btn_ViewInfo" />

    <Button
        android:id="@+id/btn_ViewInfo"
        android:layout_width="138dp"
        android:layout_height="43dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimaryMedium"
        android:elevation="12dp"
        android:text="@string/btntxt_ViewInfo"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/txt_DifficultyDesc"
        app:layout_constraintTop_toBottomOf="@+id/txt_Difficulty" />

    <Button
        android:id="@+id/btn_Completed"
        android:layout_width="250dp"
        android:layout_height="95dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:elevation="12dp"
        android:text="@string/btntxt_Completed"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Play"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="38dp"
        android:elevation="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/app_name_caps"
        android:textColor="@color/colorAccent"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ProgressBar
        android:id="@+id/progBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="24dp"
        android:foregroundTint="@color/colorAccent"
        android:indeterminateTint="@color/colorAccent"
        android:progressTint="@color/colorAccent"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btn_Play"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.025"
        tools:foregroundTint="@color/colorAccent"
        tools:visibility="invisible"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="17dp"
        android:text="@string/txt_ChooseDifficulty"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progBar"
        app:layout_constraintHorizontal_bias="0.501"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/txt_Difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_VeryEasy"
        android:textColor="@color/colorVeryEasy"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"/>

    <TextView
        android:id="@+id/txt_DifficultyDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/txt_VeryEasyDesc"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_Difficulty"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"/>

    <SeekBar
        android:id="@+id/diffSeek"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:max="4"
        android:progress="0"
        android:progressTint="@color/colorVeryEasy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="17dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_DifficultyDesc"/>

</android.support.constraint.ConstraintLayout>
