<resources>
    <string name="app_name" translatable="false">Songle</string>
    <string name="app_name_caps" translatable="false">SONGLE</string>
    <string name="btntxt_Play">New game</string>
    <string name="btntxt_Resume">Resume</string>
    <string name="btntxt_Completed">Progress</string>
    <string name="title_activity_maps">Map</string>
    <string name="txt_Permissions">Enable location permissions to play</string>
    <string name="txt_PermsEnable">Enable</string>

    <string name="txt_NoInternet">No internet connection</string>
    <string name="txt_Retry">Retry</string>
    <string name="txt_DownloadError">An error occurred downloading latest game data</string>


    <string name="txt_Ok">OK</string>


    <string name="txt_SaveInfo">Game information</string>

    <string name="txt_FoundWordsLabel" translatable="false">Found words:</string>
    <string name="txt_WordsRemainingLabel" translatable="false">Words left:</string>
    <string name="txt_LastSaveTimeLabel">Last played:</string>
    <string name="txt_PlayTimeLabel" translatable="false">Play time:</string>
    <string name="txt_DifficultyLabel" translatable="false">Difficulty:</string>

    <string name="txt_FoundWordsPlaceholder" translatable="false">11</string>
    <string name="txt_WordsRemainingPlaceholder" translatable="false">67</string>
    <string name="txt_LastSaveTimePlaceholder">10/11/17 15:20:14</string>
    <string name="txt_PlayTimePlaceholder" translatable="false">01h 50m 20s</string>
    <string name="txt_DifficultyPlaceholder" translatable="false">VERY EASY</string>

    <string name="txt_Close">Close</string>


    <string name="desc_unclassified">Unclassified</string>
    <string name="desc_boring">Boring</string>
    <string name="desc_notboring">Not boring</string>
    <string name="desc_interesting">Interesting</string>
    <string name="desc_veryinteresting">Very interesting</string>

    <string name="txt_RemainingPlaceholder">999 words left</string>
    <string name="txt_guess">Guess</string>
    <string name="txt_GuessPrompt">Guess Song</string>
    <string name="txt_GuessHint">Song name</string>
    <string name="txt_GuessSubmitBtn">Submit</string>

    <string name="txt_ChooseDifficulty">Select Difficulty</string>
    <string name="txt_ResumeDifficulty">Saved Game Difficulty</string>
    <string name="btntxt_ClearSave">Clear Save</string>
    <string name="btntxt_ViewInfo">Save Info</string>
    <string name="txt_VeryEasy">VERY EASY</string>
    <string name="txt_Easy">EASY</string>
    <string name="txt_Moderate">MODERATE</string>
    <string name="txt_Hard">HARD</string>
    <string name="txt_VeryHard">VERY HARD</string>

    <string name="txt_VeryEasyDesc">All words. Words are classified into 4 categories.</string>
    <string name="txt_EasyDesc">All words. Words are classified into 3 categories.</string>
    <string name="txt_ModerateDesc">75% of words. Words are classified into 3 categories.</string>
    <string name="txt_HardDesc">50% of words. Words are classified into 2 categories.</string>
    <string name="txt_VeryHardDesc">25% of words. No usefulness of words shown.</string>


    <string name="txt_Correct">Correct!</string>
    <string name="txt_Incorrect">Incorrect!</string>

    <string name="txt_TitleLabel">Title:</string>
    <string name="txt_ArtistLabel">Artist:</string>
    <string name="txt_URLLabel">Link:</string>

    <string name="txt_ViewWords">View words</string>
    <string name="txt_Found">Words Found</string>

    <string name="txt_SortBy">Sort by</string>
    <string name="txt_SortAlphabetical">Alphabetical</string>
    <string name="txt_SortSongOccurs">Order in lyrics</string>
    <string name="txt_SortImportance">Importance</string>
    
    <string name="txt_WordLocationPlaceholder">21:1</string>
    <string name="txt_LyricPlaceholder">Galileo</string>

    <string name="txt_NumberPlaceholder" translatable="false">01</string>
    <string name="txt_TitlePlaceholder" translatable="false">Bohemian Rhapsody</string>
    <string name="txt_ArtistPlaceholder" translatable="false">Queen</string>
    <string name="txt_URLPlaceholder" translatable="false"><a href="https://youtu.be/fJ9rUzIMcZQ">https://youtu.be/fJ9rUzIMcZQ</a></string>

    <string name="txt_QuitTitle">Are you sure you want to quit?</string>
    <string name="txt_Save">Save and quit</string>
    <string name="txt_Quit">Reset and quit</string>
    <string name="txt_Resume">Resume</string>

    <string name="txt_ResetTitle">Are you sure?</string>
    <string name="txt_ResetWarning">All current progress will be lost!</string>
    <string name="txt_YesReset">Yes</string>
    <string name="txt_NoReset">No</string>


    <string name="txt_SongList">SONG LIST</string>
    <string name="txt_SortByCompleted">Sort by completed</string>
    <string name="txt_CompletedPlaceholder">10/18 Completed</string>
    <string name="txt_NotGuessed">Not guessed</string>
    <string name="txt_Unknown">\???</string>
</resources>
