<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorPrimaryDark"
    android:elevation="24dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="9dp"
        android:text="@string/txt_GuessPrompt"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edit_guess"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:textCursorDrawable="@drawable/cursor_colour"
        android:hint="@string/txt_GuessHint"
        android:inputType="textAutoCorrect"
        android:maxLines="1"
        android:padding="10dp"/>
</LinearLayout>