...
        android:layout_height="match_parent"
        tools:context="colinparrott.com.songle.game.MapsActivity"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"/>

    <Button
        android:id="@+id/btn_guess"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/colorPrimary"
...
